--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   firebase_core: ^2.9.0
   fluttertoast: ^8.2.1
   cloud_firestore: ^4.5.0
+  google_nav_bar: ^5.0.6
 
 dev_dependencies:
   flutter_test:
