--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   fluttertoast: ^8.2.1
   cloud_firestore: ^4.5.0
   google_nav_bar: ^5.0.6
+  #added dependency
 
 dev_dependencies:
   flutter_test:
