--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,11 +34,14 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
+  # format dates
+ 
   cupertino_icons: ^1.0.2
   firebase_auth: ^4.4.0
   firebase_core: ^2.9.0
   fluttertoast: ^8.2.1
   cloud_firestore: ^4.5.0
+  intl: ^0.17.0
   # google_nav_bar: ^5.0.6
   #added dependency
 
