--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   firebase_core: ^2.9.0
   fluttertoast: ^8.2.1
   cloud_firestore: ^4.5.0
+  flutter_local_notifications: ^9.7.0
   
   # google_nav_bar: ^5.0.6
   #added dependency
