--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   fluttertoast: ^8.2.1
   cloud_firestore: ^4.5.0
   flutter_local_notifications: ^9.7.0
+  url_launcher: ^6.1.11
   
   # google_nav_bar: ^5.0.6
   #added dependency
