--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   url_launcher: ^6.1.11
   firebase_messaging: ^14.6.3
   http: ^0.13.4
+  flutter_sms: ^2.1.1
 
   
   # google_nav_bar: ^5.0.6
